change vignette style
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_0/madman/Rpacks/DSS@96838 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/DSS.Rnw
+++ b/vignettes/DSS.Rnw
@@ -2,18 +2,11 @@
 %\VignettePackage{DSS}                                                                        
 
 \documentclass{article}
+<<style, eval=TRUE, echo=FALSE, results=tex>>=
+    BiocStyle::latex(use.unsrturl=FALSE)
+@                                                                                                   
 
-\usepackage{float}
 \usepackage{Sweave}
-\usepackage[a4paper]{geometry}
-\usepackage{hyperref,graphicx}
-\textwidth=6.5in
-\textheight=9in
-%\parskip=.3cm                                                                                     
-\oddsidemargin=.1in
-\evensidemargin=.1in
-\headheight=-.5in
-\footskip=0.6in
 \renewcommand{\baselinestretch}{1.3}
 
 
